test/expected/declare_ro_exclam_k_b.out
struct S; declare ! as reference operator (S) returning bool
         ^
10: error: member operator ! must have exactly 0 parameters
